fixed the table alignment

--- a/templates_M/MSME-Finances-Revenue/css/revenueScreen.css
+++ b/templates_M/MSME-Finances-Revenue/css/revenueScreen.css
@@ -51,6 +51,74 @@ body {
   color: var(--muted-default);
 }
 .paymentMethodTable {
+  border-collapse: collapse;
+  margin: 3.1rem 0px;
+  font-size: .75rem;
+  min-width: 900px;
+  width: 100%;
+}
+.paymentMethodTable thead tr{
+  font-family: 'Overpass', sans-serif;
+  background-color: #FFF;
+  color: var(--muted-dark);
+  font-size: 12px;
+  text-align: center;
+}
+.paymentMethodTable tr{
+  font-family: 'Overpass', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+}
+.paymentMethodTable th,
+.paymentMethodTable td {
+  padding: 1.5rem 1.5rem;
+}
+.paymentMethodTable tbody tr:nth-of-type(odd) {
+  background-color: #F6F7FF;
+}
+.paymentMethodTable tbody tr:nth-of-type(even) {
+  background-color: #FFF;
+}
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding-top:64px;
+  padding-bottom: 32px;
+  bottom: 0;
+}
+.pagination a {
+  color:var(--muted-light);
+  padding: 4px 12px;
+  text-decoration: none;
+}
+.pagination a.active {
+  background-color: var(--primary-main);
+  color: white;
+  border-radius: 50%;
+}
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  border-radius: 50%;
+}
+.pageNumberButton {
+  display: flex;
+  background: transparent;
+  justify-content: center;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+#arrow {
+  padding: 0px 8px 0px 8px;
+}
+.buttonText {
+  color: var(--primary-main);
+  font-size: 16px;
+}
+
+/*
+
+.paymentMethodTable {
   width: 100%;
   height: 80%;
   margin-top:40px;
@@ -105,37 +173,3 @@ body {
 .paymentTable tr:nth-child(odd) {
   background-color: #FFF;
 } 
-.pagination {
-  display: flex;
-  justify-content: center;
-  padding-top:64px;
-  padding-bottom: 32px;
-}
-.pagination a {
-  color:var(--muted-light);
-  padding: 4px 12px;
-  text-decoration: none;
-}
-.pagination a.active {
-  background-color: var(--primary-main);
-  color: white;
-  border-radius: 50%;
-}
-.pagination a:hover:not(.active) {
-  background-color: #ddd;
-  border-radius: 50%;
-}
-.pageNumberButton {
-  display: flex;
-  background: transparent;
-  justify-content: center;
-  padding-left: 32px;
-  padding-right: 32px;
-}
-#arrow {
-  padding: 0px 8px 0px 8px;
-}
-.buttonText {
-  color: var(--primary-main);
-  font-size: 16px;
-}
